[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godot_credits/credits_generator.gd" type="Script" id=1]
[ext_resource path="res://credits/godot_credits.gd" type="Script" id=2]

[node name="GodotCredits" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Line" type="Label" parent="CreditsContainer"]
anchor_right = 1.0
margin_top = 1080.0
margin_bottom = 1094.0
size_flags_horizontal = 3
text = "Credits line"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="CreditsGenerator" type="Node" parent="."]
script = ExtResource( 1 )
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
